@@ -4,6 +4,15 @@
 Note: This file contains a list changes in the 'default' branch.
 
 
+2020-05-02
+
+ - Minor performance improvment by avoiding calling __iadd__ in a few places.
+ - Fixed bug due to the removal of __version__ in apiclient:
+   https://github.com/googleapis/google-api-python-client/commit/1d8ec6874e1c6081893de7cd7cbc86d1f6580320
+ - Changes all imports from 'apiclient' to 'googleapiclient', which is now the
+   recommended way.
+
+
 2020-04-11
 
  - Fixed #425: Tentative bug fix for crash on decref over null traceback. The
@@ -68,9 +77,6 @@ Note: This file contains a list changes in the 'default' branch.
    the boundary, but then the minimum number of rows could just be increased).
    This is quick fix that should work in the medium term.
 
-2020-05-02
-
- - Minor performance improvment by avoiding calling __iadd__ in a few places.
 
 
 2019-10-20
